<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="operandoa">Operando A:</string>
    <string name="operandob">Operando B:</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="resto">%</string>
    <string name="resultado">Resultado:</string>
    <string name="resultadofinal">Realice operación para obtener resultado</string>

</resources>
